force-app/main/default/objects/PricebookEntry/fields/Incremental_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Pricing__c</fullName>
    <description>Represents the price of a training session based on the number of participants that exceeds the base count.</description>
    <label>Incremental Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>