force-app/main/default/objects/PricebookEntry/fields/Minimum_Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Number_of_Participants__c</fullName>
    <description>Represents the minimum number of participates in a purchased training session.</description>
    <inlineHelpText>This is the minimum number of attendees before incremental pricing is evaluated.</inlineHelpText>
    <label>Minimum Number of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>